# tinydantic

./: .editorconfig  .gitignore  .linkcheckerrc  .markdownlint.yaml  .pre-commit-config.yaml  .prettierrc.yaml  .readthedocs.yaml  .yamllint  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  REUSE.toml  cspell.config.yaml  mkdocs.yaml  mkdocs.yml  netlify.toml  package-lock.json  package.json  project-words.txt  pyproject.toml  ruff.toml  taplo.toml  tombi.toml  versions.json
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  docs-dev.yaml  docs-links.yaml  docs-release.yaml  publish-python-package.yaml  publish.yml  release.yaml  test.yml
0.1/: 404.html  index.html  sitemap.xml
0.1.17/: index.html
0.1/installation/: index.html
0.1/search/: search_index.json
0.2.0/changelog/: index.html
0.2.0/contributing/development_guide/: index.html
0.2.0/reference/api/tinydantic/tinydb/middlewares/: index.html
0.2.0/reference/api/tinydantic/tinydb/operations/: index.html
0.2.0/superpowers/plans/2026-07-06-m4-docs-and-examples/: index.html
0.2.0/usage/queries/: index.html
0.3.0/: sitemap.xml
0.3.0/changelog/: index.html
0.3.0/reference/: index.html
0.3.0/reference/api/: index.html
0.3.0/reference/api/tinydantic/tinydb/middlewares/: index.html
0.3.0/reference/api/tinydantic/tinydb/storages/: index.html
0.3.0/search/: search_index.json
0.3.0/superpowers/plans/2026-07-05-m1-tooling-foundation/: index.html
0.3.0/superpowers/plans/2026-07-06-m3-complete-api/: index.html
0.3.0/superpowers/plans/2026-07-06-m5-release-prep/: index.html
0.3.0/usage/crud/: index.html
0.3.0/usage/fastapi/: index.html
0.3.1/: index.html  objects.inv  sitemap.xml
0.3.1/contributing/: index.html
0.3.1/contributing/development_guide/: index.html
0.3.1/css/: code_select.css
0.3.1/reference/api/tinydantic/: index.html
0.3.1/reference/api/tinydantic/tinydb/middlewares/: index.html
0.3.1/search/: search_index.json
0.3.1/usage/: index.html
0.3.1/usage/configuration/: index.html
0.3.1/usage/models/: index.html
0.3.1/usage/testing/: index.html
0.4.0/: objects.inv
0.4.0/license/: index.html
0.4.0/reference/api/tinydantic/: index.html
0.4.0/search/: search_index.json
0.4.0/usage/introduction/: index.html
0.4.0/usage/queries/: index.html
0.4.0/usage/quickstart/: index.html
0.4.0/usage/storage/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/FAQ/: index.html
dev/changelog/: index.html
dev/contributing/CODE_OF_CONDUCT/: index.html
dev/contributing/development_guide/: index.html
dev/css/: code_select.css
dev/get_started/: index.html
dev/get_started/installation/: index.html
dev/installation/: index.html
dev/license/: index.html
dev/reference/: index.html
dev/reference/api/tinydantic/: index.html
dev/reference/api/tinydantic/tinydb/: index.html
dev/reference/api/tinydantic/tinydb/storages/: index.html
dev/search/: search_index.json
dev/superpowers/plans/2026-07-05-m2-core-port/: index.html
dev/superpowers/plans/2026-07-06-v0.2.0-release-runbook/: index.html
dev/superpowers/specs/2026-07-05-tinydantic-v0.2-design/: index.html
dev/usage/crud/: index.html
dev/usage/fastapi/: index.html
dev/usage/installation/: index.html
dev/usage/quickstart/: index.html
docs/: .pages  FAQ.md  index.md  installation.md
docs/changelog/: .pages  index.md
docs/contributing/: .pages  CODE_OF_CONDUCT.md  code_of_conduct.md  development_guide.md  index.md
docs/css/: admonitions.css
docs/get_started/: .pages  basic_example.md  index.md  installation.md
docs/license/: .pages  index.md
docs/reference/: .pages  index.md
docs/superpowers/plans/: 2026-07-05-m1-tooling-foundation.md  2026-07-05-m2-core-port.md  2026-07-06-m3-complete-api.md  2026-07-06-m4-docs-and-examples.md  2026-07-06-m5-release-prep.md  2026-07-06-v0.2.0-release-runbook.md
docs/superpowers/specs/: 2026-07-05-tinydantic-v0.2-design.md
docs/templates/python/materialx/: class.html.jinja
docs/usage/: .pages  configuration.md  crud.md  fastapi.md  index.md  installation.md  introduction.md  models.md  queries.md  quickstart.md  storage.md  testing.md
latest/: 404.html  objects.inv
latest/search/: search_index.json
scripts/: gen_api_docs.py
src/tinydantic/: __about__.py  __init__.py  _config.py  _document.py  _errors.py  _model.py  config.py  errors.py
src/tinydantic/tinydb/: __init__.py  middlewares.py  operations.py  storages.py
tests/: __init__.py  conftest.py  test_version.py
tests/document/: conftest.py  models.py  test_document_attributes.py  test_document_get.py  test_document_insert.py  test_document_table.py  test_document_validation.py
tests/model/: __init__.py  conftest.py  models.py  test_config.py  test_get.py  test_model_attributes.py  test_model_config.py  test_model_get.py  test_model_insert.py  test_model_table.py  test_model_validation.py  test_queries.py  test_serialization.py  test_table_methods.py
tests/tinydb/: __init__.py
tests/tinydb/middlewares/: __init__.py  conftest.py  test_middlewares.py
v0.1.7/: 404.html  index.html  sitemap.xml
v0.1.7/installation/: index.html
