# SPDX-FileCopyrightText: Chris Wilson <christopher.david.wilson@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

#:schema https://json.schemastore.org/pyproject.json

[build-system]
build-backend = "uv_build"
requires = [
  "uv_build>=0.11,<0.12",
]

[project]
authors = [
  { name = "Chris Wilson", email = "christopher.david.wilson@gmail.com" },
]
# https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "PyYAML>=6.0",
  "pydantic[email]>=2.11",
  "tinydb>=4.8",
]
description = "A Pydantic-powered ODM (object-document mapper) for TinyDB"
keywords = [
  "odm",
  "pydantic",
  "tinydb",
]
license = "Apache-2.0 OR MIT"
license-files = [
  "LICENSES/*",
]
name = "tinydantic"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.19"

[project.urls]
Changelog = "https://github.com/tinydantic/tinydantic/blob/main/CHANGELOG.md"
Documentation = "https://tinydantic.dev"
Issues = "https://github.com/tinydantic/tinydantic/issues"
Source = "https://github.com/tinydantic/tinydantic"

[dependency-groups]
dev = [
  "check-jsonschema",
  "commitizen",
  "editorconfig-checker",
  "interrogate",
  "jsonschema[format]",
  "poethepoet",
  "pre-commit",
  "pre-commit-ci-config",
  "pyclean",
  "reuse>=5.0.0",
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "types" },
]
docs = [
  # black is used by separate_signature option in mkdocstrings-python
  "black",
  "fastapi",
  "griffe",
  "httpx",
  "linkchecker",
  "markdown-callouts",
  "markdown-gfm-admonition",
  "mdx_truly_sane_lists",
  "mike",
  "mkdocs-awesome-pages-plugin",
  "mkdocs-gen-files",
  "mkdocs-github-admonitions-plugin",
  "mkdocs-include-markdown-plugin",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
  "poethepoet",
  # properdocs is the docs build engine (poe docs-build); the transitive
  # mkdocs package remains installed (mkdocs-material dependency) and is what
  # mike uses for versioned deploys.
  "properdocs",
]
lint = [
  "poethepoet",
  "ruff>=0.14",
]
test = [
  "fastapi",
  "httpx",
  "packaging",
  "poethepoet",
  "pytest-cov",
  "pytest-randomly",
  "pytest-rerunfailures",
  "pytest-xdist",
  "pytest>=8",
]
types = [
  "mypy>=1.14",
  "packaging",
  "types-PyYAML",
]

[tool.coverage.run]
branch = true
parallel = true
source_pkgs = [
  "tests",
  "tinydantic",
]

[tool.coverage.paths]
tests = [
  "*/tinydantic/tests",
  "tests",
]
tinydantic = [
  "*/tinydantic/src/tinydantic",
  "src/tinydantic",
]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "no cov",
]

[tool.commitizen]
annotated_tag = true
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
version_scheme = "semver2"

[tool.poe.tasks]
clean = "pyclean . --debris --verbose"
fmt = [
  "_ruff-fix",
  "_ruff-format",
]
lint = [
  "_ruff-check",
  "_ruff-format-check",
]
pre-commit = "pre-commit run --all-files --verbose"
sbom = "reuse spdx -o reuse.spdx"
sbom-check = "reuse lint"
spell-check = "npx cspell --gitignore --dot ."
test = "pytest"
test-cov = "pytest --cov --cov-branch"
types = "mypy --install-types --non-interactive src/tinydantic tests"
update-project-words = { shell = "npx cspell --gitignore --dot --words-only --unique . | sort --ignore-case >> project-words.txt" }

_ruff-check = "ruff check ."
_ruff-fix = "ruff check --fix ."
_ruff-format = "ruff format ."
_ruff-format-check = "ruff format --check ."

check = [
  "lint",
  "sbom-check",
  "spell-check",
  "types",
]

[tool.poe.tasks.docs-build]
cmd = "properdocs build --config-file mkdocs.yaml --clean --strict"
env = { PYTHONUNBUFFERED = "1", SOURCE_DATE_EPOCH = "1580601600" }

[tool.poe.tasks.docs-build-check]
sequence = [
  { ref = "docs-build --no-directory-urls" },
  { ref = "docs-check" },
]

[tool.poe.tasks.docs-check]
cmd = "linkchecker --config .linkcheckerrc site"

[tool.poe.tasks.docs-ci-publish]
cmd = "mike deploy --config-file mkdocs.yaml --update-aliases --push"
env = { PYTHONUNBUFFERED = "1", SOURCE_DATE_EPOCH = "1580601600" }

[tool.poe.tasks.docs-serve]
cmd = "properdocs serve --config-file mkdocs.yaml --dev-addr localhost:8000"
env = { PYTHONUNBUFFERED = "1" }

[tool.interrogate]
fail-under = 100
ignore-overloaded-functions = true
ignore-private = true
ignore-semiprivate = true
omit-covered-files = true
style = "google"
verbose = 2

[tool.mypy]
python_version = "3.11"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob '*.md' --ignore=docs/superpowers"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
minversion = "6.0"
testpaths = [
  "CONTRIBUTING.md",
  "README.md",
  "docs",
  "src",
  "tests",
]
