# SPDX-FileCopyrightText: Chris Wilson <christopher.david.wilson@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

#:schema https://json.schemastore.org/pyproject.json

[project]
name = "tinydantic"
version = "0.4.0"
description = "A Pydantic-powered ODM (object-document mapper) for TinyDB"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0 OR MIT"
license-files = [
  "LICENSES/*",
]
authors = [
  { name = "Chris Wilson", email = "christopher.david.wilson@gmail.com" },
]
keywords = [
  "odm",
  "pydantic",
  "tinydb",
]
# https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "PyYAML>=6.0",
  "pydantic[email]>=2.11",
  "tinydb>=4.8",
]

[project.urls]
Changelog = "https://github.com/tinydantic/tinydantic/blob/main/CHANGELOG.md"
Documentation = "https://tinydantic.dev"
Issues = "https://github.com/tinydantic/tinydantic/issues"
Source = "https://github.com/tinydantic/tinydantic"

[dependency-groups]
dev = [
  "check-jsonschema",
  "commitizen",
  "editorconfig-checker",
  "interrogate",
  "jsonschema[format]",
  "poethepoet",
  "pre-commit",
  "pre-commit-ci-config",
  "pyclean",
  "reuse>=5.0.0",
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "types" },
]
docs = [
  # black is used by separate_signature option in mkdocstrings-python
  "black",
  "fastapi",
  "griffe",
  "httpx2",
  "linkchecker",
  "markdown-callouts",
  "markdown-gfm-admonition",
  "mdx_truly_sane_lists",
  "mike",
  "mkdocs-awesome-pages-plugin",
  "mkdocs-gen-files",
  "mkdocs-github-admonitions-plugin",
  "mkdocs-include-markdown-plugin",
  "mkdocs-materialx",
  "mkdocstrings",
  "mkdocstrings-python",
  "poethepoet",
  # properdocs is the docs build engine. mike >=2.2.0 auto-detects it and
  # runs properdocs for versioned deploys too. The mkdocs package remains
  # installed only as a transitive dependency (mkdocs-materialx pins it for
  # import compatibility).
  "properdocs",
]
lint = [
  "poethepoet",
  "ruff>=0.14",
]
test = [
  "fastapi",
  "httpx2",
  "packaging",
  "poethepoet",
  "pytest>=8",
  "pytest-cov",
  "pytest-randomly",
  "pytest-rerunfailures",
  "pytest-xdist",
]
types = [
  "mypy>=1.14",
  "packaging",
  "types-PyYAML",
]

[build-system]
requires = [
  "uv_build>=0.11,<0.12",
]
build-backend = "uv_build"

[tool.commitizen]
annotated_tag = true
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
version_scheme = "semver2"

[tool.coverage.run]
branch = true
parallel = true
source_pkgs = [
  "tests",
  "tinydantic",
]

[tool.coverage.paths]
tests = [
  "*/tinydantic/tests",
  "tests",
]
tinydantic = [
  "*/tinydantic/src/tinydantic",
  "src/tinydantic",
]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "no cov",
]

[tool.interrogate]
fail-under = 100
ignore-overloaded-functions = true
ignore-private = true
ignore-semiprivate = true
omit-covered-files = true
style = "google"
verbose = 2

[tool.mypy]
python_version = "3.10"

[tool.poe.tasks]
clean = "pyclean . --debris --verbose"
fmt = [
  "_ruff-fix",
  "_ruff-format",
]
lint = [
  "_ruff-check",
  "_ruff-format-check",
]
pre-commit = "pre-commit run --all-files --verbose"
sbom = "reuse spdx -o reuse.spdx"
sbom-check = "reuse lint"
spell-check = "npx cspell --gitignore --dot ."
test = "pytest"
test-cov = "pytest --cov --cov-branch"
# Each step syncs an ephemeral environment from uv.lock for one
# supported Python version (--isolated leaves .venv untouched) and
# runs test-cov in it, writing a per-version COVERAGE_FILE that the
# final coverage steps merge into one cross-version report.
test-matrix = [
  "_test-py310",
  "_test-py311",
  "_test-py312",
  "_test-py313",
  "_test-py314",
  "_coverage-combine",
  "_coverage-report",
]
types = "mypy --install-types --non-interactive src/tinydantic tests"
update-project-words = { shell = "npx cspell --gitignore --dot --words-only --unique . | sort --ignore-case >> project-words.txt" }

_coverage-combine = "coverage combine .coverage.py310 .coverage.py311 .coverage.py312 .coverage.py313 .coverage.py314"
_coverage-report = "coverage report"
_ruff-check = "ruff check ."
_ruff-fix = "ruff check --fix ."
_ruff-format = "ruff format ."
_ruff-format-check = "ruff format --check ."

check = [
  "lint",
  "sbom-check",
  "spell-check",
  "types",
]

[tool.poe.tasks.docs-build]
cmd = "properdocs build --config-file mkdocs.yaml --clean --strict"
env = { PYTHONUNBUFFERED = "1", SOURCE_DATE_EPOCH = "1580601600" }

[tool.poe.tasks.docs-build-check]
sequence = [
  { ref = "docs-build --no-directory-urls" },
  { ref = "docs-check" },
]

[tool.poe.tasks.docs-check]
cmd = "linkchecker --config .linkcheckerrc site"

[tool.poe.tasks.docs-ci-publish]
cmd = "mike deploy --config-file mkdocs.yaml --update-aliases --push"
env = { PYTHONUNBUFFERED = "1", SOURCE_DATE_EPOCH = "1580601600" }

[tool.poe.tasks.docs-serve]
cmd = "properdocs serve --config-file mkdocs.yaml --dev-addr localhost:8000"
env = { PYTHONUNBUFFERED = "1" }

[tool.poe.tasks._test-py310]
cmd = "uv run --isolated --python 3.10 --group test poe test-cov"
env = { COVERAGE_FILE = ".coverage.py310" }

[tool.poe.tasks._test-py311]
cmd = "uv run --isolated --python 3.11 --group test poe test-cov"
env = { COVERAGE_FILE = ".coverage.py311" }

[tool.poe.tasks._test-py312]
cmd = "uv run --isolated --python 3.12 --group test poe test-cov"
env = { COVERAGE_FILE = ".coverage.py312" }

[tool.poe.tasks._test-py313]
cmd = "uv run --isolated --python 3.13 --group test poe test-cov"
env = { COVERAGE_FILE = ".coverage.py313" }

[tool.poe.tasks._test-py314]
cmd = "uv run --isolated --python 3.14 --group test poe test-cov"
env = { COVERAGE_FILE = ".coverage.py314" }

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob '*.md'"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
filterwarnings = [
  # The queries.md "shadowing" section deliberately defines a field named
  # `search` to demonstrate the pitfall, so pydantic's warning is expected.
  'ignore:Field name "search" in "Command" shadows an attribute in parent "TinydanticModel":UserWarning',
]
minversion = "6.0"
testpaths = [
  "CONTRIBUTING.md",
  "README.md",
  "docs",
  "src",
  "tests",
]
